--- a/THL/pages/production_content_creation.html
+++ b/THL/pages/production_content_creation.html
@@ -201,12 +201,48 @@
                     <!-- <span class="lead">There are people who have a good number of followers, all of them interested in knowing their daily life through a social network, as is the case of Production & Content Creation.</span> -->
                 </div>
 
-                <div class="row">
+                <!-- <div class="row">
                     <div class="col-lg-6 col-12">
                         <img src="../images/fondos/facebook-destacada.jpg" alt="" class="img-fluid">
                     </div>
                     <div class="col-lg-6 col-12">
                         <p><span class="lead" style="color:#fff; font-weight: bold;">We stay innovative by keeping creative and forward thinking. Always remaining ‘ahead of the curb’ to influence the latest trends and iconic fashion statements. Curating sets from the ground up, and having the best team of content/ creative directors, graphic designers, animators, photographers, videographers, editors and stylists on board means that brands have one less thing to worry about, as we have all the necessary tools needed to execute a vision, whether big or small - the possibilities are endless.</span></p>
+                    </div>
+                </div> -->
+                <!-- <div class="col-12 col-lg-2"></div> -->
+                <div class="row">
+                    <div class="col-12 col-lg-8">
+                        <div class="card-columns">
+                            <div class="card">
+                                <img src="../images/img-prodution/2E6F8D46-C38E-4635-A822-76522D5E1EE8.JPG" alt="" class="img-fluid">
+                            </div>
+                            <div class="card">
+                                <img src="../images/img-prodution/6AFF675A-20DF-45D9-955A-264EA145C46F.JPG" alt="" class="img-fluid">
+                            </div>
+                            <div class="card">
+                                <img src="../images/img-prodution/7801A0E8-2FF3-4230-931D-4A0EA8922740.JPG" alt="" class="img-fluid">
+                            </div>
+                            <div class="card">
+                                <img src="../images/img-prodution/E429BADD-9B25-40ED-86AA-AF44FB5CFFDB.JPG" alt="" class="img-fluid">
+                            </div>
+                            <div class="card">
+                                <img src="../images/img-prodution/PHOTO-2021-04-21-13-53-48.jpg" alt="" class="img-fluid">
+                            </div>
+                            <div class="card">
+                                <img src="../images/img-prodution/PHOTO-2021-04-21-13-53-50.jpg" alt="" class="img-fluid">
+                            </div>
+                            <div class="card">
+                                <img src="../images/img-prodution/PHOTO-2021-04-21-13-53-50[1].jpg" alt="" class="img-fluid">
+                            </div>
+                            <div class="card">
+                                <img src="../images/img-prodution/PHOTO-2021-04-21-13-53-51.jpg" alt="" class="img-fluid">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-lg-4">
+                        <div class="et-divi-sticky-header">
+                            <p><span class="lead" style="color:#fff; font-weight: bold;">We stay innovative by keeping creative and forward thinking. Always remaining ‘ahead of the curb’ to influence the latest trends and iconic fashion statements. Curating sets from the ground up, and having the best team of content/ creative directors, graphic designers, animators, photographers, videographers, editors and stylists on board means that brands have one less thing to worry about, as we have all the necessary tools needed to execute a vision, whether big or small - the possibilities are endless.</span></p>
+                        </div>
                     </div>
                 </div>
             </div>
