--- a/THL/pages/production_content_creation.html
+++ b/THL/pages/production_content_creation.html
@@ -44,8 +44,7 @@
             background-color: transparent !important;
             padding: 0;
         }
-        
-        #Services::before,
+        /* #Services::before,
         body::before {
             content: "";
             position: absolute;
@@ -71,7 +70,7 @@
                 height: 95.2%;
                 background-color: transparent;
             }
-        }
+        } */
         
         .seccion-trasparente::before {
             content: "";
