--- a/THL/pages/services.html
+++ b/THL/pages/services.html
@@ -132,7 +132,7 @@
         </header>
         <!-- Container -->
         <!-- Our Ecosystem -->
-        <section id="Services" class="p-t-50 p-b-50 background-grey scroll-behavior: smooth;" >
+        <section id="Services" class="p-t-50 p-b-50 background-grey scroll-behavior: smooth;">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-12 col-lg-1"></div>
@@ -141,7 +141,7 @@
                             <div class="col-12 mb-5">
                                 <a href="./campaing-strategy.html" class="mouse_hover" data-imagen="box-instagram">
                                     <!-- <span class="url">/CAMPAING-STRATEGY</span> -->
-                                    <h2 class="">CAMPAING STRATEGY</h2>
+                                    <h2 class="">CAMPAIGN STRATEGY</h2>
                                 </a>
                             </div>
                             <div class="col-12 mb-5">
@@ -169,8 +169,8 @@
                                 </a>
                             </div>
                         </div>
-                    </div>                    
-					<div class="col-12 col-lg-5">
+                    </div>
+                    <div class="col-12 col-lg-5">
                         <div class="d-flex align-self-center h-100 my-fixed-item">
                             <a href="" id="url">
                                 <img class="animate__animated animate__bounceInUp img-fluid w-100" src="" id="imeg" alt="">
