--- a/THL/pages/campaing-strategy.html
+++ b/THL/pages/campaing-strategy.html
@@ -53,7 +53,7 @@
             bottom: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(0, 0, 0, 0.3);
+            background-color: transparent;
         }
         
         @media (max-width:780px) {
@@ -67,7 +67,7 @@
                 bottom: 0;
                 width: 100%;
                 height: 95.2%;
-                background-color: rgba(0, 0, 0, 0.3);
+                background-color: transparent;
             }
         }
         
@@ -78,7 +78,7 @@
             right: 0;
             top: 0;
             bottom: 0;
-            background-color: rgba(0, 0, 0, 0.3);
+            background-color: transparent;
             width: 100%;
             height: 100%;
         }
@@ -156,12 +156,12 @@
                         <div class="container">
                             <nav>
                                 <ul>
-                                    <li><a href="../index.htm">Home</a></li>
-                                    <li><a href="./services.html" class="dropdown">Services</a>
+                                    <li><a style="color:black !important" href="../index.htm">Home</a></li>
+                                    <li><a style="color:black !important" href="./services.html" class="dropdown">Services</a>
 
                                     </li>
-                                    <li><a href="../pages/contacto.html">Contact</a></li>
-                                    <li><a href="../pages/about-me.html">About us</a></li>
+                                    <li><a style="color:black !important" href="../pages/contacto.html">Contact</a></li>
+                                    <li><a style="color:black !important" href="../pages/about-me.html">About us</a></li>
                                 </ul>
                             </nav>
                         </div>
