--- a/THL/pages/digital_data_marketing.html
+++ b/THL/pages/digital_data_marketing.html
@@ -54,7 +54,7 @@
             bottom: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(0, 0, 0, 0.3);
+            background-color: transparent;
         }
         
         @media (max-width:780px) {
@@ -68,7 +68,7 @@
                 bottom: 0;
                 width: 100%;
                 height: 95.2%;
-                background-color: rgba(0, 0, 0, 0.3);
+                background-color: transparent;
             }
         }
         
@@ -79,7 +79,7 @@
             right: 0;
             top: 0;
             bottom: 0;
-            background-color: rgba(0, 0, 0, 0.3);
+            background-color: transparent;
             width: 100%;
             height: 100%;
         }
