--- a/THL/index.htm
+++ b/THL/index.htm
@@ -68,6 +68,9 @@
             .lh-mobile {
                 line-height: 1rem !important;
             }
+            .m-b-100 {
+                margin-bottom: 0 !important;
+            }
         }
     </style>
 </head>
@@ -267,7 +270,7 @@
 
             <div class="container ">
 
-                <div class="col-lg-8 m-b-100 center ">
+                <div class="col-lg-8 m-b-100 center mb-0">
                     <div class="heading-text heading-section text-center ">
                         <h2 id="text-center wiki " style="color: #fff; text-align: center; " class="mobile-title" data-animate-delay="600 " data-animate="flipInX ">
                             Services </h2>
