--- a/THL/index.htm
+++ b/THL/index.htm
@@ -282,11 +282,9 @@
                 <!-- <div class="text-center " id="team ">Our team currently consists of <b>17 members</b>...and growing!</div> -->
                 <!-- Team -->
                 <div class="carousel equalize team team-box " data-margin="20" data-arrows="true " data-items="5" data-items-sm="2" data-items-xs="1" data-equalize-item=".team-item">
-
-                    <!-- Team -->
-                    <div class="team-item">
+                    <div class="team-item" style="height: 150px!important;" data-height-lg="100">
                         <a class="link-item " href="./pages/campaing-strategy.html "></a>
-                        <div class="cotent-img mt-5 mb-5 ">
+                        <div class="cotent-img ">
 
                             <img src="./images/Nuevas/campaign_straregy.jpg " alt="Actores ">
                         </div>
@@ -295,9 +293,9 @@
                     <!-- end: Team item-->
 
                     <!-- Team item -->
-                    <div class="team-item">
+                    <div class="team-item" style="height: 150px!important;" data-height-lg="100">
                         <a class="link-item" href="./pages/production_content_creation.html "></a>
-                        <div class="cotent-img mt-5 mb-5 ">
+                        <div class="cotent-img ">
                             <img src="./images/Nuevas/production_content.jpg " alt="Musicos ">
                         </div>
                         <span class="mobile-text">PRODUCTION & <br>CONTENT CREATION</span>
@@ -305,9 +303,9 @@
                     <!-- end: Team item-->
 
                     <!-- Team item -->
-                    <div class="team-item">
+                    <div class="team-item" style="height: 150px!important;" data-height-lg="100">
                         <a class="link-item" href="./pages/digital_data_marketing.html "></a>
-                        <div class="cotent-img mt-5 mb-5 ">
+                        <div class="cotent-img ">
 
                             <img src="./images/Nuevas/digital_marketing.jpg " alt="Youtubers ">
                         </div>
@@ -317,9 +315,9 @@
                     <!-- end: Team item-->
 
                     <!-- Team item -->
-                    <div class="team-item">
+                    <div class="team-item" style="height: 150px!important;" data-height-lg="100">
                         <a class="link-item" href="./pages/brand_talent_relations.html "></a>
-                        <div class="cotent-img mt-5 mb-5 ">
+                        <div class="cotent-img ">
                             <img src="images/Nuevas/brand_talent.jpg " alt="Reporteros ">
                         </div>
                         <span class="mobile-text">BRAND & <br> TALENT RELATIONS</span>
@@ -327,9 +325,9 @@
                     <!-- end: Team item-->
 
                     <!-- Team item -->
-                    <div class="team-item">
+                    <div class="team-item" style="height: 150px!important;" data-height-lg="100">
                         <a class="link-item" href="./pages/legal_compliance.html "></a>
-                        <div class="cotent-img mt-5 mb-5 ">
+                        <div class="cotent-img ">
                             <img src="images/fondos/soudcould-banner.jpg " alt="Escritores ">
                         </div>
                         <span class="mobile-text">LEGAL & <br>COMPLIANCE</span>
